# kvlar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/kvlar-audit/: Cargo.toml
crates/kvlar-audit/src/: event.rs  export.rs  lib.rs  logger.rs
crates/kvlar-cli/: Cargo.toml
crates/kvlar-cli/policies/: default.yaml  shell.yaml  slack.yaml
crates/kvlar-cli/src/: client_config.rs  main.rs
crates/kvlar-core/: Cargo.toml
crates/kvlar-core/src/: action.rs  approval.rs  decision.rs  engine.rs  error.rs  lib.rs  policy.rs  testing.rs
crates/kvlar-core/tests/: integration.rs
crates/kvlar-proxy/: Cargo.toml
crates/kvlar-proxy/src/: approval.rs  config.rs  handler.rs  health.rs  lib.rs  mcp.rs  proxy.rs  shutdown.rs  stdio.rs  watcher.rs
crates/kvlar-proxy/tests/: mcp_integration.rs
docs/adr/: 001-fail-closed-default.md  002-yaml-policy-format.md  003-pure-core-no-io.md  004-stdio-transport.md  005-python-sdk-subprocess.md
policies/examples/: default.test.yaml  filesystem-demo.test.yaml  filesystem-demo.yaml  github.test.yaml  github.yaml  permissive.yaml  postgres.test.yaml  postgres.yaml  shell.test.yaml  slack.test.yaml  strict.yaml
sdks/python/: pyproject.toml
sdks/python/kvlar/: __init__.py  engine.py
sdks/python/tests/: test_engine.py
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: index.ts
sdks/typescript/tests/: engine.test.ts
