[package]
name = "kvlar-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured audit logging for Kvlar — immutable, JSON-formatted action trails"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
