[package]
name = "kvlar-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for Kvlar — manage policies, query logs, run local security proxy"

[[bin]]
name = "kvlar"
path = "src/main.rs"

[dependencies]
kvlar-core = { path = "../kvlar-core", version = "0.3.0" }
kvlar-proxy = { path = "../kvlar-proxy", version = "0.3.0" }
kvlar-audit = { path = "../kvlar-audit", version = "0.3.0" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = "5"
indexmap = { version = "2", features = ["serde"] }
