[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kvlar"
version = "0.1.0"
description = "Python SDK for Kvlar — runtime security for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Kvlar Team", email = "team@kvlar.io" },
]
keywords = ["ai", "security", "agents", "mcp", "policy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://kvlar.io"
Repository = "https://github.com/kvlar-io/kvlar"
Documentation = "https://kvlar.io/docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
